syntax = "proto3";
package dymensionxyz.dymension.sequencer;

import "gogoproto/gogo.proto";
import "dymension/sequencer/params.proto";
import "dymension/sequencer/sequencer.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/dymensionxyz/dymension/v3/x/sequencer/types";

// GenesisState defines the sequencer module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Sequencer sequencerList = 2 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
